--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -1,8 +1,15 @@
-# frozen_string_literal: true
+ruby '3.2.2'
 
 source "https://rubygems.org"
+
+gem 'multi_json'
 
 github 'sinatra/sinatra' do
   gem 'sinatra'
   gem 'sinatra-contrib'
 end
+
+gem 'sinatra-activerecord'
+gem 'sqlite3'
+gem 'rake'
+
