--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -1,17 +1,21 @@
 # for dockerize
 ruby '2.7.5'
+
 #ruby '3.2.2'
 #ruby '3.0.2'
 
 source "https://rubygems.org"
 
-gem 'multi_json'
+group :development, :test do
+  gem 'rspec'
+end
 
 github 'sinatra/sinatra' do
   gem 'sinatra'
   gem 'sinatra-contrib'
 end
 
+gem 'multi_json'
 gem 'sinatra-activerecord'
 gem 'sqlite3'
 gem 'rake'
