--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -1,21 +1,14 @@
-# for dockerize
-ruby '2.7.5'
-
-#ruby '3.2.2'
-#ruby '3.0.2'
-
-source "https://rubygems.org"
-
-group :development, :test do
-  gem 'rspec'
-end
-
-github 'sinatra/sinatra' do
-  gem 'sinatra'
-  gem 'sinatra-contrib'
-end
-
-gem 'multi_json'
-gem 'sinatra-activerecord'
-gem 'sqlite3'
-gem 'rake'
+source 'https://rubygems.org'
+  gem 'sinatra-activerecord'
+  gem 'sqlite3'
+  gem 'rake'
+    
+  group :test do
+    gem 'rspec'
+    gem 'simplecov', require: false, group: :test
+  end
+    
+  github 'sinatra/sinatra' do
+    gem 'sinatra'
+    gem 'sinatra-contrib'
+  end
