--- a/cheftravel/config/database.yml
+++ b/cheftravel/config/database.yml
@@ -6,19 +6,13 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: sqlite3
+  <<: *default
   database: db/db.sqlite3
-  pool: 5
-  timeout: 5000
 
 test:
-  adapter: sqlite3
+  <<: *default
   database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
 
 production:
-  adapter: sqlite3
+  <<: *default
   database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
