--- a/cheftravel/docker-compose.yml
+++ b/cheftravel/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose.yml
 version: "3.8"
 services:
   app:
@@ -7,4 +8,3 @@ services:
       - "4567:4567"
     volumes:
       - .:/src
-
