tests for question and server. Ref #5

--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -6,6 +6,7 @@ source 'https://rubygems.org'
   group :test do
     gem 'rspec'
     gem 'simplecov', require: false, group: :test
+    gem 'rack-test'
   end
     
   github 'sinatra/sinatra' do
