--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -1,15 +1,15 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
-  gem 'sinatra-activerecord'
-  gem 'sqlite3'
-  gem 'rake'
-    
-  group :test do
-    gem 'rspec'
-    gem 'simplecov', require: false, group: :test
-    gem 'rack-test'
-  end
-    
-  github 'sinatra/sinatra' do
-    gem 'sinatra'
-    gem 'sinatra-contrib'
-  end
+gem 'rake'
+gem 'sinatra-activerecord'
+gem 'sqlite3'
+group :test do
+  gem 'rack-test'
+  gem 'rspec'
+  gem 'simplecov', require: false, group: :test
+end
+github 'sinatra/sinatra' do
+  gem 'sinatra'
+  gem 'sinatra-contrib'
+end
