--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -4,6 +4,7 @@ source 'https://rubygems.org'
 gem 'rake'
 gem 'sinatra-activerecord'
 gem 'sqlite3'
+gem 'sinatra-flash'
 group :test do
   gem 'rack-test'
   gem 'rspec'
