[#186222105]login & register with gmail

--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -5,6 +5,8 @@ gem 'rake'
 gem 'sinatra-activerecord'
 gem 'sqlite3'
 gem 'sinatra-flash'
+gem 'omniauth-google-oauth2'
+gem 'jwt'
 group :test do
   gem 'rack-test'
   gem 'rspec'
