--- a/cheftravel/Gemfile
+++ b/cheftravel/Gemfile
@@ -3,6 +3,7 @@
 source 'https://rubygems.org'
 gem 'bcrypt'
 gem 'rake'
+gem 'rubocop', '~> 1.57', require: false
 gem 'sinatra-activerecord'
 gem 'sqlite3'
 gem 'sinatra-flash'
